add some text in history.txt

--- a/history.txt
+++ b/history.txt
@@ -50,4 +50,7 @@ Ruslan Sonkin
 25.10.20 10:31:44:
 asdfghjkl;jhgfdsfghjkl;lkjhytretyuioklp
 
+Alexander Makedonsky
+465 635 41365 1:
 
+Hello, my dear friend! I'm Lex!
